--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "underscores",
-  "version": "1.0.0",
-  "description": "Hi. I'm a starter theme called _s, or underscores, if you like. I'm a theme meant for hacking so don't use me as a Parent Theme. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.",
-  "author": "Automattic Theme Team",
-  "license": "GPL-2.0-or-later",
+  "name": "elevkaren",
+  "version": "2.1.0",
+  "description": "A Wordpress Theme custom made for the student union of Procivitas.",
+  "author": "Karl Sellergren",
   "keywords": [
     "WordPress",
     "Theme"
   ],
-  "homepage": "https://github.com/Automattic/_s#readme",
+  "homepage": "https://www.karlsellergren.se",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Automattic/_s.git"
+    "url": "git+https://github.com/sakerhetspolisen/elevkaren.git"
   },
   "bugs": {
-    "url": "https://github.com/Automattic/_s/issues"
+    "url": "https://github.com/sakerhetspolisen/elevkaren/issues"
   },
   "devDependencies": {
     "@wordpress/scripts": "^9.0.0",
